Added extraction program

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+extract
 mccBuild
 getData
 config.txt
 uavCombined-raspi.cpp
 uavCombined-raspi2.cpp
 uavDAQ-raspi.cpp
+*.DAQ
+VECTORNAV*
+CONFIGDATA*
