--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ uavDAQ-raspi.cpp
 *.DAQ
 VECTORNAV*
 CONFIGDATA*
+cat
+libuldaq-1.0.0.tar.bz2
+libuldaq-1.0.0/
+vnproglib-1-1-4.zip
+vnproglib-1.1.4.0/
