fixed DAQ data conversion and added output filepath to configuration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.0)
 
 project(uav)
 
-add_compile_options(-std=c++17 -g -O3 -Wall)
+add_compile_options(-g -Wall)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(vnproglib-1.1.4.0/cpp)
 add_subdirectory(yaml-cpp)
@@ -12,6 +15,8 @@ add_executable(getData main.cpp)
 add_executable(extract extract.cpp)
 add_executable(DAQ2CSV DAQ2CSV.cpp)
 add_executable(vn_test vn_test.cpp)
+
+target_compile_options(getData PUBLIC -O3) # compile the data aquisition to max optimization
 
 include_directories(vnproglib-1.1.4.0/cpp/include yaml-cpp/include uldaq/src)
 
@@ -24,6 +29,7 @@ target_link_libraries(getData
 	wiringPi
 	libvncxx
 	uldaq
+  stdc++fs
 )
 
 target_link_libraries(extract
