--- a/rpi3b.yml
+++ b/rpi3b.yml
@@ -1,4 +1,5 @@
-sample_duration: 0.15
+sample_duration: 20
+output_dir: "/home/pi/logs"
 vectornav:
   baud: 230400
   port: "/dev/ttyUSB0"
@@ -6,5 +7,7 @@ vectornav:
 daq: 
   v_range: 5
   chan_num: 8
-  rate: 10000
-
+  rate: 20000
+xbee: 
+  rate: 10
+  port: "/dev/ttyUSB1"
