--- a/rpi3b.yml
+++ b/rpi3b.yml
@@ -1,7 +1,7 @@
 sample_duration: 100
 output_dir:  "/media/sda1" # WARNING: only use /media/sda1 if you have mounted a USB drive there. "/home/pi/logs"
 output_dir_backup: "/home/pi/BC6B"
-button_start: false
+button_start: true
 gps_fix: 3 # 3 is LLA (3D)
 vectornav:
   baud: 460800 # if you are having sync problems, bump the baudrate.
